--- a/src/index.css
+++ b/src/index.css
@@ -4,31 +4,47 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-  .hoverEffect {
-    @apply duration-300 cursor-pointer;
-  }
-  .headerSedenavLi {
-    @apply hover:underline underline-offset-2 cursor-pointer text-gray-300 hover:text-white;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+#root {
+  margin: 0 auto;
+  width: 100%;
 }
 
-/* ============= NavLink active Start here ============== */
-nav .active li {
-  color: black;
-  font-weight: 600;
-  text-decoration: 1px underline black;
+a {
+  text-decoration: none;
 }
 
-@media screen and (max-width: 665px) {
-  nav .active li {
-    color: white;
-    font-weight: 600;
-    text-decoration: 1px underline white;
-  }
+main {
+  margin-top: 90px;
+}
+input{
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
+h1,
+h2,
+h2.h4,
+h5,
+h6,
+h7 {
+  font-weight: 500;
 }
-/* ============= NavLink active End here ================ */
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+.main-chat-screen{
+  width: 50%;
+  margin: 0px auto;
+  
+}
+
+
