--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@100;200;300;400;500&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 #root {
   margin: 0 auto;
@@ -45,6 +42,9 @@ ul {
   width: 50%;
   margin: 0px auto;
   
+}
+.chat-outerscroll{
+  height: 70vh;
 }
 
 
